--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "convex": "^1.28.2",
     "expo": "~54.0.20",
     "expo-constants": "~18.0.10",
+    "expo-file-system": "~19.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.13",
     "expo-secure-store": "^15.0.7",
@@ -38,7 +40,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "svix": "^1.81.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
